QRcode text validate API
